--- a/package.json
+++ b/package.json
@@ -4,6 +4,16 @@
   "description": "A custom React hook and provider for LINE Frontend Framework (LIFF).",
   "main": "./dist/useLiff.js",
   "types": "./dist/useLiff.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/useLiff.js",
+      "types": "./dist/useLiff.d.ts"
+    },
+    "./server": {
+      "import": "./dist/server.js",
+      "types": "./dist/server.d.ts"
+    }
+  },
   "scripts": {
     "build": "tsc"
   },
@@ -18,7 +28,7 @@
   "author": "Kazuma Horiike",
   "license": "MIT",
   "dependencies": {
-    "@line/liff": "^2.23.2",
+    "@line/liff": "^2.27.3",
     "react": "^18.2.0"
   },
   "peerDependencies": {
