feat: Add migration guide and automated migration script
- Add comprehensive migration guide (docs/migration-guide.md)
- Add automated migration script (bin/migrate.js) for npx command
- Add shell script for manual migration (scripts/migrate.sh)
- Update README with migration information
- Add bin field to package.json for npx command support

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "scripts": {
     "build": "tsc"
   },
+  "bin": {
+    "use-liff-migrate": "./bin/migrate.js"
+  },
   "keywords": [
     "liff",
     "line",
